animation and align fix

--- a/styles.css
+++ b/styles.css
@@ -10,11 +10,13 @@
     padding: 0;
 }
 
-html, body {
+body {
     background-color:  var(--background-color);
     color: var(--text-color);
     font-family: "Lucida Console", "Verdana", sans-serif;
 }
+
+/* Title */
 
 #welcome-section {
     display: -webkit-box;   /* OLD: Safari,  iOS, Android browser, older WebKit browsers.  */
@@ -32,23 +34,37 @@ html, body {
     -ms-flex-pack: center;
     -webkit-justify-content: center;
     justify-content: center;
-    
     margin: 0;
     height: 100vh; 
     width: 100vw;
+    overflow: hidden;
+}
+
+#welcome-section > h1 {
+    font-size: 22vw;
+    margin-top: 75px;
+}
+
+/* Animation */
+
+#animation {
+    width: 100%;
+    display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    bottom: 150px;
+    z-index: 1;
 }
 
 #scroll-animation {
-    width: 10vw;
-    max-width: 100px;
+    width: 25vw;
+    max-width: 300px;
     height: 25px;
     background-color: var(--text-color);
-    border: 1px solid black;
-    z-index: 1;
     margin: 5px;
     opacity: 0%;
-
 }
 
 #scroll-animation.scroll-sector-1 {
@@ -63,9 +79,6 @@ html, body {
     animation: fade 5s 3s ease infinite;
 }
 
-#welcome-section > h1 {
-    font-size: 22vw;
-}
 
 @keyframes fade {
     0% {
@@ -82,4 +95,19 @@ html, body {
     }
 }
 
+/* Main */
+
+/* Media */
+
+@media(max-height:900px) {
+    #animation {
+            bottom: 50px;
+    }
+}
+
+@media(max-height:600px) {
+    #animation {
+            visibility: hidden;
+    }
+}
 
